--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="Kwac City" content=", all about my world. The web dev class will be great">
     <title>Document</title>
 </head>
-<bodythis is the official site of the web page of kwac city>
- 
-</bodyThere is no qualms>
+<body>
+ <h1>okay now we are back</h1>
+</body>
 </html>
